# name: test_cancel_case[running-True-completed-None]
  dict({
    'cancelCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'status': 'CANCELED',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'status': 'COMPLETED',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_cancel_case[running-True-ready-None]
  dict({
    'cancelCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'status': 'CANCELED',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'status': 'CANCELED',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_order_by_question_answer_value[date-True-False]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-31',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-26',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-29',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-30',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-27',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-28',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[date-True-True]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-27',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-28',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-29',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-30',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-31',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'dateValue': '2019-05-26',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[files-True-False]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'f',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'a',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'd',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'c',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'b',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'e',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[files-True-True]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'b',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'e',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'd',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'c',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'f',
                        }),
                      ]),
                    }),
                  }),
                  dict({
                    'node': dict({
                      'fileValue': list([
                        dict({
                          'name': 'a',
                        }),
                      ]),
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[form-True-False]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'f',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'd',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'b',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[form-True-True]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'b',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'd',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'f',
                    }),
                  }),
                ]),
                'totalCount': 1,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[text-True-False]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'c',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'a2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'b',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'c2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'a',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'b2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_order_by_question_answer_value[text-True-True]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'a',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'b2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'b',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'c2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
        dict({
          'node': dict({
            'document': dict({
              'answers': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'stringValue': 'c',
                    }),
                  }),
                  dict({
                    'node': dict({
                      'stringValue': 'a2',
                    }),
                  }),
                ]),
                'totalCount': 2,
              }),
            }),
          }),
        }),
      ]),
      'totalCount': 3,
    }),
  })
# ---
# name: test_query_all_cases[completed-0]
  dict({
    'allCases': dict({
      'edges': list([
      ]),
      'totalCount': 0,
    }),
  })
# ---
# name: test_query_all_cases[running-1]
  dict({
    'allCases': dict({
      'edges': list([
        dict({
          'node': dict({
            'status': 'RUNNING',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_save_case[False-None-100]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[False-None-None]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[False-["group-name"]|groups-100]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                  'group-name',
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[False-["group-name"]|groups-None]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                  'group-name',
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[True-None-100]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': dict({
          'status': 'READY',
        }),
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[True-None-None]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': dict({
          'status': 'READY',
        }),
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[True-["group-name"]|groups-100]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': dict({
          'status': 'READY',
        }),
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
# name: test_save_case[True-["group-name"]|groups-None]
  dict({
    'saveCase': dict({
      'case': dict({
        'document': dict({
          'form': dict({
            'slug': 'suggest-adult-allow',
          }),
        }),
        'parentWorkItem': dict({
          'status': 'READY',
        }),
        'status': 'RUNNING',
        'workItems': dict({
          'edges': list([
            dict({
              'node': dict({
                'addressedGroups': list([
                ]),
                'document': dict({
                  'form': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
                'status': 'READY',
              }),
            }),
          ]),
        }),
      }),
      'clientMutationId': None,
    }),
  })
# ---
